# AlphaShell

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  coverage.sh  demo.ash  demo.bzs  implemented.sh
.github/workflows/: build.yml
src/: main.rs  parse.rs  tokenize.rs  transpile.rs  types.rs  utils.rs
src/old/: parse.rs
src/old/parse/: error.rs  expression.rs  function.rs  general.rs  import.rs  simple.rs  statement.rs
src/parse/: array.rs  block.rs  condition.rs  declaration.rs  error.rs  expression.rs  external.rs  for.rs  function.rs  function_call.rs  if.rs  import.rs  map.rs  node.rs  number.rs  parse_helper.rs  return.rs  string.rs  switch.rs  utils.rs  value.rs  var.rs  while.rs
src/tokenize/: error.rs
src/transpile/: block.rs  declaration.rs  error.rs  expression.rs  for.rs  foreach.rs  function.rs  function_call.rs  if.rs  import.rs  index.rs  return.rs  source.rs  switch.rs  transpiler.rs  utils.rs  value.rs  while.rs
test/: primes.ash  test.ash  test.bzs  test2.ash  test2.bzs  test3.bzs
