[package]
name = "alpha-shell"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "A transpiler for the AlphaShell language"
homepage = "https://github.com/AlphaShell-org/AlphaShell"
documentation = "https://github.com/AlphaShell-org/AlphaShell"
repository = "https://github.com/AlphaShell-org/AlphaShell"

[dependencies]
regex = "1.6.0"
phf = { version = "0.11.0", features = ["macros"] }
clap = { version = "3.2.16", features = ["derive"] }

[[bin]]
name = "ash"
path = "src/main.rs"
