[package]
name = "alpha-shell"
authors = ["Maneren"]
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "A transpiler for the AlphaShell language"
homepage = "https://github.com/AlphaShell-org/AlphaShell"
documentation = "https://github.com/AlphaShell-org/AlphaShell"
repository = "https://github.com/AlphaShell-org/AlphaShell"

[dependencies]
regex = "1.6.0"
phf = { version = "0.11.1", features = ["macros"] }
clap = { version = "4.0.17", features = ["derive"] }

[[bin]]
name = "ash"
path = "src/main.rs"
