[package]
name = "alpha-shell"
authors = ["Maneren"]
version = "0.4.3"
edition = "2021"
license = "MIT"
description = "A transpiler for the AlphaShell language"
homepage = "https://github.com/AlphaShell-org/AlphaShell"
documentation = "https://github.com/AlphaShell-org/AlphaShell"
repository = "https://github.com/AlphaShell-org/AlphaShell"

[dependencies]
regex = "1.7.1"
phf = { version = "0.11.1", features = ["macros"] }
clap = { version = "4.1.8", features = ["derive"] }
rand = "0.8.5"
anyhow = "1.0.71"

[[bin]]
name = "ash"
path = "src/main.rs"
